--- a/api/parent/pom.xml
+++ b/api/parent/pom.xml
@@ -136,7 +136,18 @@
             <version>8.0.18</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- 健康检查 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
+
+    <modules>
+        <module>../bi-ums</module>
+        <module>../bi-pms</module>
+    </modules>
 
     <build>
         <plugins>
